--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-body{
+body {
   margin: 0;
   padding: 0;
   display: flex;
@@ -8,3 +8,5 @@ body{
   height: 100%;
   background-color: #292929;
 }
+
+/*# sourceMappingURL=styles.css.map */
